# craftsman

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: hooks-example.yaml
src/craftsman/: __init__.py  cli.py  llm.py
src/craftsman/agents/: __init__.py  config.py  subagents.py
src/craftsman/agents/prompts/: coder.md  planner.md  researcher.md  reviewer.md
src/craftsman/config/: __init__.py  user_config.py
src/craftsman/graph/: __init__.py  builder.py  checkpoints.py  compaction.py  custom_agent.py  safety.py
src/craftsman/hooks/: __init__.py  hook_system.py
src/craftsman/permission/: __init__.py  rules.py
src/craftsman/tools/: __init__.py  core.py  memory.py  switch_agent.py  todo.py  web_fetch.py  web_search.py
src/craftsman/ui/: __init__.py  tui.py
tests/: test_core.py
